# opengl-tutorial

./: .gitignore  README.md
base/: Makefile.am
base/autom4te.cache/: requests
base/src/: glad.c  logging.cpp  main.cpp
transformations/: Makefile.am  configure.ac
transformations/include/: gl_program.hpp  logging.hpp  png_image.hpp
transformations/src/: fragment_shader.glsl  gl_program.cpp  logging.cpp  main.cpp  png_image.cpp  vertex_shader.glsl
triangle/: Makefile.in  configure  configure.ac
triangle/autom4te.cache/: output.0  requests  traces.0  traces.1
triangle/include/glad/: glad.h
triangle/src/: main.cpp
